--- a/src/Developer Zone/Main/Cart/Cart.css
+++ b/src/Developer Zone/Main/Cart/Cart.css
@@ -2,6 +2,7 @@
   border-top: 5px solid blue;
   border-bottom: 5px solid blue;
   transition: 0.6s;
+  font-family: "Bebas Neue", cursive;
 }
 
 .shoping-cart:hover {
