--- a/src/Developer Zone/Header/Header.css
+++ b/src/Developer Zone/Header/Header.css
@@ -1,10 +1,9 @@
 .headerStyle {
   text-align: center;
-  background-color: white;
-  /* background-image: url(image/header-bg.jpg); */
+  background-image: url(./images/header-img.jpg);
   padding-bottom: 30px;
   padding-top: 20px;
-  border-radius: 0px 0px 200px 200px;
+  clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
 }
 .welcomeTaxt {
   color: #5a5a5a;
